# serve

./: .gitignore  Cargo.toml  Makefile  README.md  serve.toml.bak  serve.yaml
example_config/: serve.json  serve.toml  serve.yaml
src/: banner.rs  config.rs  handler.rs  main.rs
templates/: listing.html
