[package]
name = "serve"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
clap = { version = "4.5.8", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serde_yaml = "0.9.34"
toml = "0.8.14"
glob = "0.3.1"
regex = "1.10.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
mime_guess = "2.0.4"
local-ip-address = "0.6.1"
arboard = "3.4.0"
anyhow = "1.0.86"
tower-http = { version = "0.5.2", features = ["fs", "cors", "trace", "compression-full"] }
http = "1.1.0"
futures-util = "0.3.30"
tokio-util = { version = "0.7.11", features = ["io"] }
qr2term = "0.3.3"
percent-encoding = "2.3.2"



